@@ -1,5 +1,7 @@
 source :gemcutter
 
-gem 'rest-client',        '1.6.3'
-gem 'rspec',              '1.3.0'
-gem 'rake',               '0.8.7'
+gem 'rest-client',       '1.6.3'
+gem 'rspec',             '1.3.0'
+gem 'rake',              '0.8.7'
+gem 'flexmock',          '0.8.7'
+gem 'ruby-debug19',      '0.11.6'
