@@ -1,1 +1,5 @@
-Coming soon
+= right_api_client - CHANGELOG.rdoc
+
+
+== right_api_client - 1.5.0    not yet released
+Initial public release, supports all of the calls in RightScale API 1.5.
